<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.DetailActivity">

    <data>
        <variable
            name="hasEssay"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:clipChildren="false"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <cn.tyhyh.easeword.ui.custom.SlideRecyclerView
            android:id="@+id/essayContentRv"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:paddingHorizontal="21dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            bind:layout_behavior="@string/appbar_scrolling_view_behavior"
            bind:isGone="@{!hasEssay}" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            bind:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:elevation="0dp">

            <include
                android:id="@+id/toolbarBinding"
                layout="@layout/detail_toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="88dp"
            android:textColor="@color/colorCommonBlack"
            android:alpha="0.6"
            android:text="@string/no_essay_tip"
            bind:isGone="@{hasEssay}"
            tools:visibility="gone"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNote"
            android:layout_width="42dp"
            android:layout_height="42dp"
            bind:fabCustomSize="42dp"
            android:layout_gravity="end|bottom"
            bind:elevation="2dp"
            android:layout_marginBottom="150dp"
            android:layout_marginEnd="26dp"
            app:backgroundTint="@color/colorPrimary"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_text_note"
            tools:visibility="visible"
            bind:layout_behavior=".ui.behavior.DetailFabHideBehavior"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addDrawing"
            android:layout_width="42dp"
            android:layout_height="42dp"
            bind:fabCustomSize="42dp"
            android:layout_gravity="end|bottom"
            bind:elevation="2dp"
            android:layout_marginBottom="92dp"
            android:layout_marginEnd="26dp"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_text_drawing"
            android:visibility="gone"
            tools:visibility="visible"
            bind:layout_behavior=".ui.behavior.DetailFabHideBehavior"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEssayBtn"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="21dp"
            bind:elevation="3dp"
            bind:fabCustomSize="52dp"
            app:srcCompat="@drawable/ic_add"
            app:backgroundTint="@color/colorPrimary"
            bind:layout_behavior=".ui.behavior.DetailFabHideShowBehavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>