...
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="40dp"/>
        <TextView
            android:id="@+id/feedbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:background="@drawable/transparent_btn_bg"
            android:textSize="@dimen/sizeNormalText"
            android:textColor="@color/colorCommonBlack"
...
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:minHeight="40dp"/>
        <TextView
            android:id="@+id/aboutUsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="@dimen/sizeNormalText"
            android:textColor="@color/colorCommonBlack"
            android:background="@drawable/transparent_btn_bg" />
...
