<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tool:context=".ui.activity.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="cn.tyhyh.easeword.ui.viewmodel.MainViewModel" />
        <variable
            name="onCatalogClick"
            type="android.view.View.OnClickListener" />
        <variable
            name="catalogText"
            type="String" />
        <variable
            name="catalogDrawingEnd"
            type="android.graphics.drawable.Drawable" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <include
            android:id="@+id/toolbarBinding"
            layout="@layout/common_toolbar"
            bind:title="@{catalogText}"
            bind:onTitleClick="@{onCatalogClick}"
            bind:titleDrawableEnd="@{catalogDrawingEnd}"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="21dp"
            bind:refreshing="@={viewModel.isRefreshing}"
            android:layout_marginTop="23dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment
                    android:id="@+id/wordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="cn.tyhyh.easeword.ui.fragment.MainFragment"/>

                <FrameLayout
                    android:id="@+id/chapterContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/main_container_bg"
                    android:visibility="invisible">


                    <ImageView
                        android:layout_gravity="end|bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_fold"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/chapterRecyclerView"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="102dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="none" />

                </FrameLayout>

            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</layout>
