<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolBarHeight"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:layout_scrollFlags="enterAlways"
        android:background="@color/colorPrimaryDark"
        tools:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:scaleType="centerInside"
            android:background="@drawable/toolbar_left_btn_bg" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorCommonBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rightBtn"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorCommonBlack"
            android:background="@drawable/toolbar_right_btn_bg" />

    </androidx.appcompat.widget.Toolbar>

</layout>

